--- a/app/assets/stylesheets/scss_toolkit/_flexbox.scss
+++ b/app/assets/stylesheets/scss_toolkit/_flexbox.scss
@@ -23,6 +23,7 @@
 		padding-right: 1%;
 		padding-left: 1%;
 		margin-bottom: 10vh;
+		max-width: 100%;
 	}
 	& > .row {
 		flex-direction: row !important;
